# quickjs-cffi

./: .gitignore  CHANGELOG.md  README.md  _quickjs_lib.h  pyproject.toml
examples/: demo_0.py  demo_1.py  demo_2.py  demo_3.py  demo_4.py  demo_5.py  demo_contexts.py  demo_handlebars.py  demo_lodash.py  demo_yjs.py
misc/: crypto.js
quickjs/: __init__.py  quickjs.py
scripts/: build.py  clean.py
